# dmritool

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
Applications/: CMakeLists.txt
Applications/DWIProcessing/: CMakeLists.txt  CorrectBValues.cxx  CorrectBValues.xml  DWIMultipleShellSplit.cxx  DWIMultipleShellSplit.xml  DWINoiseGenerator.cxx  DWINoiseGenerator.xml  DWIPreprocess.cxx  DWIPreprocess.xml  DWISimulator.cxx  DWISimulator.xml  DWISingleVoxelSimulator.cxx  DWISingleVoxelSimulator.xml
Applications/DiffusionModels/: CMakeLists.txt  ComputeSHCoefficientsOfDWIFromSymmetricTensor.cxx  ComputeSHCoefficientsOfDWIFromSymmetricTensor.xml  MeanDiffusivityEstimator.cxx  MeanDiffusivityEstimator.xml  ODFNormalization.cxx  ODFNormalization.xml  SHCoefficientsFit.cxx  SHCoefficientsFit.xml  SHCoefficientsPower.cxx  SHCoefficientsPower.xml  SHCoefficientsRotate.cxx  SHCoefficientsRotate.xml  SHCoefficientsToGFA.cxx  SHCoefficientsToGFA.xml  SHCoefficientsToSphericalFunctionSamples.cxx  SHCoefficientsToSphericalFunctionSamples.xml  SPFToODF.cxx  SPFToODF.xml  SPFToODFConverter.cxx  SPFToODFConverter.xml  SPFToProfile.cxx  SPFToProfile.xml  SPFToProfileConverter.xml  SPFToScalarMap.cxx  SPFToScalarMap.xml  SPFToScalarMapConverter.xml  SphereTessellator.cxx  SphereTessellator.xml  SphericalPolarFourierImaging.cxx  SphericalPolarFourierImaging.xml  TensorFormatConverter.cxx  TensorFormatConverter.xml
Applications/SamplingScheme/: CMakeLists.txt  OrientationStatistics.cxx  OrientationStatistics.xml  SamplingSchemeDistance.cxx  SamplingSchemeDistance.xml  SamplingSchemeQSpace1OptEstimation.cxx  SamplingSchemeQSpace1OptEstimation.xml  SamplingSchemeQSpaceIMOCEstimation.cxx  SamplingSchemeQSpaceIMOCEstimation.xml  SamplingSchemeQSpaceIncrementalEstimation.cxx  SamplingSchemeQSpaceIncrementalEstimation.xml  SamplingSchemeQSpaceRandomEstimation.cxx  SamplingSchemeQSpaceRandomEstimation.xml
Applications/Scripts/: CMakeLists.txt  CombineVTKPolyData.py  ConvertGurobiSolToIndex.py  README.md  VTKPolyData.py  VTKPolyData_gui.py  __init__.py  utlDMRITool.py  utlVTK.py
Applications/Utilities/: 4DImageMath.cxx  4DImageMath.xml  4DToVectorImageConverter.cxx  4DToVectorImageConverter.xml  CMakeLists.txt  ImageInfo.cxx  ImageInfo.xml  ImageMultiplication.cxx  ImageMultiplication.xml  PrintImage.cxx  PrintImage.xml  TextFileOperator.cxx  TextFileOperator.xml  VectorImageNormalization.cxx  VectorImageNormalization.xml  VectorTo4DImageConverter.cxx  VectorTo4DImageConverter.xml
Applications/Visualization/: CMakeLists.txt  MeshFromDiscreteFiberODF.cxx  MeshFromDiscreteFiberODF.xml  MeshFromPeaks.cxx  MeshFromPeaks.xml  MeshFromSHCoefficients.cxx  MeshFromSHCoefficients.xml  MeshFromSHCoefficientsConverter.cxx  MeshFromSHCoefficientsConverter.xml  MeshFromSphericalFunctionTessellatedSamples.cxx  MeshFromSphericalFunctionTessellatedSamples.xml  MeshFromTensors.cxx  MeshFromTensors.xml  MeshFromTracts.cxx  MeshFromTracts.xml  OrientationsViewer.cxx  OrientationsViewer.xml  RGBImageToVTKXMLImageConverter.cxx  RGBImageToVTKXMLImageConverter.xml  VTKXMLImageToVectorImageConverter.cxx  VTKXMLImageToVectorImageConverter.xml  VectorImageToVTKXMLImageConverter.cxx  VectorImageToVTKXMLImageConverter.xml
CMake/: DMRITOOLConfig.cmake.in  DMRITOOLConfigure.h.in  DownloadDoxygenTAG.cmake  ExternalDoxygenTAG.cmake  FindBLAS.cmake  FindGSL.cmake  FindLAPACK.cmake  FindMKL.cmake  FindOpenBLAS.cmake  PreventInSourceBuilds.cmake  ProjectCMakeFunctions.cmake  UseDMRITOOL.cmake.in
Data/ElectricRepulsion/: Elec003.txt  Elec004.txt  Elec005.txt  Elec006.txt  Elec007.txt  Elec008.txt  Elec009.txt  Elec010.txt  Elec011.txt  Elec012.txt  Elec013.txt  Elec014.txt  Elec015.txt  Elec016.txt  Elec017.txt  Elec018.txt  Elec019.txt  Elec020.txt  Elec021.txt  Elec022.txt  Elec023.txt  Elec024.txt  Elec025.txt  Elec026.txt  Elec027.txt  Elec028.txt  Elec029.txt  Elec030.txt  Elec031.txt  Elec032.txt  Elec033.txt  Elec034.txt  Elec035.txt  Elec036.txt  Elec037.txt  Elec038.txt  Elec039.txt  Elec040.txt  Elec041.txt  Elec042.txt  (+215 more)
Data/Packing/: Pack003.txt  Pack004.txt  Pack005.txt  Pack006.txt  Pack007.txt  Pack008.txt  Pack009.txt  Pack010.txt  Pack011.txt  Pack012.txt  Pack013.txt  Pack014.txt  Pack015.txt  Pack016.txt  Pack017.txt  Pack018.txt  Pack019.txt  Pack020.txt  Pack021.txt  Pack022.txt  Pack023.txt  Pack024.txt  Pack025.txt  Pack026.txt  Pack027.txt  Pack028.txt  Pack029.txt  Pack030.txt  Pack031.txt  Pack032.txt  Pack033.txt  Pack034.txt  Pack035.txt  Pack036.txt  Pack037.txt  Pack038.txt  Pack039.txt  (+61 more)
Examples/: Elec060.txt  directions_t3.txt  directions_t4.txt  dwi_circle_crossing.txt  dwi_crossing.txt  dwi_crossingCylinder_3x3.txt  dwi_diagonal_spherical.txt  test.sh
Matlab/: README.md
QTApplications/: CMakeLists.txt
QTApplications/vtkviewer/: CMakeLists.txt  README.txt  VTKViewer.cxx  VTKViewer.h  main.cxx
ThirdPartyApplications/: CMakeLists.txt
Utilities/: CMakeLists.txt  VTKPolyData.py
Wrapping/: CMakeLists.txt
Wrapping/Matlab/: CMakeLists.txt  README.md
Wrapping/Matlab/CMake/: FindBLAS.cmake  FindGSL.cmake  FindLAPACK.cmake  FindMKL.cmake  FindMatlab.cmake  FindOpenBLAS.cmake  MatlabMakeMacros.cmake  ProjectCMakeFunctions.cmake
Wrapping/Matlab/Common/: CMakeLists.txt  mexITKImageRead.cxx  mexITKImageRead.m  mexITKImageWrite.cxx  mexITKImageWrite.m
Wrapping/Matlab/DWIProcessing/: CMakeLists.txt  mexReadDWIList.cxx  mexReadDWIList.m
Wrapping/Matlab/DiffusionModels/: CMakeLists.txt  mexGetSHBasisMatrix.cxx  mexGetSHBasisMatrix.m  mexGetSPFBasisMatrix.cxx  mexGetSPFBasisMatrix.m  mexGetSamplesFromSPFCoefficients.cxx  mexGetSamplesFromSPFCoefficients.m  mexSphericalPolarFourierImaging.cxx  mexSphericalPolarFourierImaging.m
Wrapping/Matlab/MEXHelperFunctions/: mexITK.h  mexSTD.h  mexVNL.h  mexutils.h  utlMEX.h
Wrapping/Matlab/SamplingScheme/: CMakeLists.txt  mexReadGrad.cxx  mexReadGrad.m
Wrapping/Matlab/Tests/: CMakeLists.txt  test_GetSPFBaissMatrix.m  test_Spams.cxx  test_Spams2.cxx  test_purecpp.cxx  test_puremex.cxx  test_puremexOpenmp.cxx  test_puremexitk.cxx
(+297 files in other folders)
